# summit-hack-backend

./: CSV_Users.csv  data.csv  generated-requests.http  pyproject.toml  requirements.txt
summit_hack_backend/: beispiel_daten.txt  chat_gpt.py  config.py  crm.py  main.py  prompt.py  prompt_request.py  result_processing.py  routes.py  service.py  widget_chooser.py
summit_hack_backend/prompt_templates/: prompt.py
summit_hack_backend/widgets/: customer.py  kpi.py  news.py  timeseries.py  timeseries_object.py  widget.py
