[tool.poetry]
name = "summit-hack-backend"
version = "0.1.0"
description = ""
authors = ["Christoph <christoph.thees@gmx.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
